# KPI-intellegence-system

./: README.md  chatbot.py  chatbot_cli.py  crew_agents.py  crew_tasks.py  dashboard.py  main.py  pyproject.toml  requirements.txt
config/: cause_action_map.yaml  config.yaml
data/processed/: kpi.parquet
output/: alerts_log.csv  causes.json  recommendations.csv
src/: actions.py  analysis.py  ingest.py  monitor.py  utils.py
